--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,8 @@
       "react/no-typos": 0,
       "react/prefer-stateless-function": 0,
       "react/no-unused-state": 0,
-      "no-unreachable": 1
+      "no-unreachable": 1,
+      "no-class-assign": 0,
+      "jsx-a11y/label-has-for":0
     }
   }
