--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "styled-components": "^2.3.0"
